Examples/Semantics/success/addedlet.cl
class Foo {
	bar() : Int
	{
		let a:Int in a + let b:Int in b
	};
};